ci: Postgres-backed smoke test with notes flow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -101,7 +101,7 @@ jobs:
           $C logs worker  --no-color --timestamps | tail -n 200 || true
           exit 1
 
-      - name: Smoke – meeting + job flow
+      - name: Smoke – meeting + job + notes flow
         shell: bash
         run: |
           set -euo pipefail
@@ -268,8 +268,20 @@ jobs:
         if: failure()
         run: |
           mkdir -p artifacts
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml ps
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml logs --no-color > artifacts/compose.log
+          docker compose \
+            -f docker-compose.yml \
+            -f docker-compose.ci.yml \
+            -f docker-compose.override.ci.yml \
+            -f docker-compose.alembic.ci.yml \
+            -f docker-compose.redis.ci.yml \
+            ps
+          docker compose \
+            -f docker-compose.yml \
+            -f docker-compose.ci.yml \
+            -f docker-compose.override.ci.yml \
+            -f docker-compose.alembic.ci.yml \
+            -f docker-compose.redis.ci.yml \
+            logs --no-color > artifacts/compose.log
 
       - name: Upload logs artifact (on failure)
         if: failure()
@@ -281,9 +293,28 @@ jobs:
       - name: Show container logs (always)
         if: always()
         run: |
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml ps
-          docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml logs --no-color --timestamps || true
+          docker compose \
+            -f docker-compose.yml \
+            -f docker-compose.ci.yml \
+            -f docker-compose.override.ci.yml \
+            -f docker-compose.alembic.ci.yml \
+            -f docker-compose.redis.ci.yml \
+            ps
+          docker compose \
+            -f docker-compose.yml \
+            -f docker-compose.ci.yml \
+            -f docker-compose.override.ci.yml \
+            -f docker-compose.alembic.ci.yml \
+            -f docker-compose.redis.ci.yml \
+            logs --no-color --timestamps || true
 
       - name: Tear down (always)
         if: always()
-        run: docker compose -f docker-compose.yml -f docker-compose.ci.yml -f docker-compose.override.ci.yml -f docker-compose.alembic.ci.yml down -v
+        run: |
+          docker compose \
+            -f docker-compose.yml \
+            -f docker-compose.ci.yml \
+            -f docker-compose.override.ci.yml \
+            -f docker-compose.alembic.ci.yml \
+            -f docker-compose.redis.ci.yml \
+            down -v
