--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,7 +29,7 @@ jobs:
     runs-on: ubuntu-latest
     needs: build
     env:
-      DATABASE_URL: sqlite:////app/backend/dev.db
+      DATABASE_URL: postgresql+psycopg2://mna:mna_local_pw@db/meetings
       REDIS_URL: redis://redis:6379/0
 
     steps:
