--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,4 @@
+
 services:
   backend:
     build:
@@ -13,12 +14,23 @@ services:
       - ./storage:/app/storage
     working_dir: /app/backend
     command: uvicorn app.main:app --host 0.0.0.0 --port 8000
+
   minio:
-    labels:
-      traefik.enable: "true"
-      traefik.docker.network: meeting-notes-assistant_default
-      traefik.http.routers.minio.rule: Host(`minio.mna.local`)
-      traefik.http.routers.minio.entrypoints: websecure
-      traefik.http.routers.minio.tls: "true"
-      traefik.http.middlewares.hsts.headers.stsSeconds: "31536000"
-      traefik.http.routers.minio.middlewares: hsts
+    image: minio/minio:latest
+    command: server /data --console-address ":9001"
+    environment:
+      MINIO_ROOT_USER: minio
+      MINIO_ROOT_PASSWORD: minio123
+    ports:
+      - "9000:9000"
+      - "9001:9001"
+    volumes:
+      - minio_data:/data
+
+  redis:
+    image: redis:7-alpine
+    ports:
+      - "6379:6379"
+
+volumes:
+  minio_data:
