--- a/.github/workflows/smoke.yml
+++ b/.github/workflows/smoke.yml
@@ -11,8 +11,8 @@ jobs:
     runs-on: ubuntu-latest
 
     env:
-      # Match your prodready Docker stack:
-      DATABASE_URL: postgresql+psycopg2://postgres:postgres@db/meetings
+      # Match your prodready Docker stack (Postgres 16):
+      DATABASE_URL: postgresql+psycopg2://mna:mna_local_pw@db:5432/meetings
       REDIS_URL: redis://redis:6379/0
       S3_PUBLIC_ENDPOINT: http://minio:9000
       STORAGE_BACKEND: s3
@@ -31,6 +31,7 @@ jobs:
           docker compose \
             -f docker-compose.yml \
             -f docker-compose.prodready.yml \
+            -f docker-compose.postgres.yml \
             up -d --build db redis minio backend
 
       - name: Wait for API (healthz)
@@ -49,6 +50,7 @@ jobs:
           docker compose \
             -f docker-compose.yml \
             -f docker-compose.prodready.yml \
+            -f docker-compose.postgres.yml \
             logs backend || true
           exit 1
 
@@ -74,12 +76,46 @@ jobs:
               sys.exit(1)
           PY
 
+      - name: DB smoke – trivial query via Alembic models
+        run: |
+          docker compose \
+            -f docker-compose.yml \
+            -f docker-compose.prodready.yml \
+            -f docker-compose.postgres.yml \
+            exec -T backend python - <<'PY'
+          from sqlalchemy import text
+          from app.db import SessionLocal
+
+          def db_smoke():
+              with SessionLocal() as session:
+                  # 1) Simple connectivity test
+                  one = session.execute(text("SELECT 1")).scalar_one()
+                  assert one == 1, f"Expected 1, got {one}"
+
+                  # 2) Confirm tables exist in the public schema
+                  tables = session.execute(
+                      text("""
+                          SELECT table_name
+                          FROM information_schema.tables
+                          WHERE table_schema = 'public'
+                      """)
+                  ).scalars().all()
+
+              assert tables, "No tables found in public schema; did migrations run?"
+
+              print("✅ CI DB smoke passed: SELECT 1 and public tables =", tables)
+
+          if __name__ == "__main__":
+              db_smoke()
+          PY
+
       - name: Dump logs on failure
         if: failure()
         run: |
           docker compose \
             -f docker-compose.yml \
             -f docker-compose.prodready.yml \
+            -f docker-compose.postgres.yml \
             logs || true
 
       - name: Tear down Docker stack
@@ -88,4 +124,5 @@ jobs:
           docker compose \
             -f docker-compose.yml \
             -f docker-compose.prodready.yml \
+            -f docker-compose.postgres.yml \
             down -v
